feat(Game): Finished the Game class
[110] [Done]
Also added methods like ShowTitle(), DisplaySelectMenu(), and others so that the app looks good

--- a/P_Arcade/P_Arcade/P_Arcade.csproj
+++ b/P_Arcade/P_Arcade/P_Arcade.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Game.cs" />
     <Compile Include="HighScore.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Arcade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
