--- a/P_Arcade/P_Arcade/P_Arcade.csproj
+++ b/P_Arcade/P_Arcade/P_Arcade.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connect4.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="HighScore.cs" />
     <Compile Include="Arcade.cs" />
