--- a/P_Arcade/P_Arcade/P_Arcade.csproj
+++ b/P_Arcade/P_Arcade/P_Arcade.csproj
@@ -50,6 +50,7 @@
     <Compile Include="HighScore.cs" />
     <Compile Include="Arcade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TicTacToe.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
